Fix colours on mobile
@creesch introduced this change, but I'm not sure why

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -371,10 +371,6 @@ h2 span, h2 small {
 /* Mobile layout */
 /* */
 @media (max-width: 968px) {
-    .message span {
-        color: #C7C7C7;
-    }
-
     #bufferlines table {
         border-collapse: separate;
         border-spacing: 2px 4px;
